Added SinglePlayerDeckTest initial commit